#694: limit the number of items in the LOTW RSS